# openblue

./: .clang-format  .config  CMakeLists.txt  Kconfig  Makefile  README.md  README_CN.md  TODO.md
base/: CMakeLists.txt  assert.h  bt_assert.h  bt_atomic.c  bt_atomic.h  bt_buf.c  bt_buf.h  bt_buf_simple.c  bt_debug.c  bt_debug.h  bt_mem_pool.c  bt_mem_pool.h  bt_poll.c  bt_poll.h  bt_storage.c  bt_work.c  bt_work.h  byteorder.h  log.c  log.h  utils.c  utils.h
base/queue/: bt_fifo.h  bt_lifo.h  bt_queue.c  bt_queue.h
bluetooth/: .clang-format  CMakeLists.txt  Kconfig  Makefile  module.mk
bluetooth/audio/: CMakeLists.txt  Kconfig  Kconfig.bap  Kconfig.ccp  Kconfig.gmap  Kconfig.tmap  aics.c  aics_client.c  aics_internal.h  ascs.c  ascs_internal.h  audio.c  audio_internal.h  bap_base.c  bap_broadcast_assistant.c  bap_broadcast_sink.c  bap_broadcast_source.c  bap_endpoint.h  bap_internal.h  bap_iso.c  bap_iso.h  bap_scan_delegator.c  bap_stream.c  bap_stream.h  bap_unicast_client.c  bap_unicast_client_internal.h  bap_unicast_server.c  bap_unicast_server.h  cap_acceptor.c  cap_commander.c  cap_common.c  cap_handover.c  cap_initiator.c  cap_internal.h  cap_stream.c  ccid.c  ccp_call_control_client.c  ccp_call_control_server.c  codec.c  csip_crypto.c  (+33 more)
bluetooth/audio/shell/: CMakeLists.txt  audio.h  bap.c  bap_broadcast_assistant.c  bap_scan_delegator.c  bap_usb.c  cap_acceptor.c  cap_commander.c  cap_initiator.c  ccp_call_control_client.c  ccp_call_control_server.c  csip_set_coordinator.c  csip_set_member.c  gmap.c  has.c  has_client.c  mcc.c  media_controller.c  micp_mic_ctlr.c  micp_mic_dev.c  mpl.c  pbp.c  tbs.c  tbs_client.c  tmap.c  vcp_vol_ctlr.c  vcp_vol_rend.c
bluetooth/common/: CMakeLists.txt  Kconfig  assert.h  bt_shell_private.c  bt_shell_private.h  bt_str.c  dummy.c  hci_common_internal.h  rpa.c
bluetooth/crypto/: CMakeLists.txt  bt_crypto.c  bt_crypto.h  bt_crypto_psa.c
bluetooth/host/: CMakeLists.txt  Kconfig  Kconfig.gatt  Kconfig.l2cap  addr.c  addr_internal.h  adv.c  adv.h  aes_ccm.c  att.c  att_internal.h  buf.c  buf_view.h  conn.c  conn_internal.h  crypto_psa.c  cs.c  data.c  direction.c  direction_internal.h  ecc.c  ecc.h  gatt.c  gatt_internal.h  hci_common.c  hci_core.c  hci_core.h  hci_raw.c  hci_raw_internal.h  id.c  id.h  iso.c  iso_internal.h  keys.c  keys.h  l2cap.c  l2cap_internal.h  long_wq.c  long_wq.h  monitor.c  (+9 more)
bluetooth/host/classic/: CMakeLists.txt  Kconfig  a2dp.c  a2dp_codec_sbc.c  at.c  at.h  avctp.c  avctp_internal.h  avdtp.c  avdtp_internal.h  avrcp.c  br.c  conn_br.c  conn_br_internal.h  did.c  goep.c  hfp_ag.c  hfp_ag_internal.h  hfp_hf.c  hfp_hf_internal.h  keys_br.c  l2cap_br.c  l2cap_br_interface.h  l2cap_br_internal.h  obex.c  obex_internal.h  rfcomm.c  rfcomm_internal.h  sco.c  sco_internal.h  sdp.c  ssp.c
bluetooth/host/classic/shell/: CMakeLists.txt  a2dp.c  avrcp.c  bredr.c  goep.c  hfp.c  rfcomm.c
bluetooth/host/shell/: CMakeLists.txt  bt.c  bt.h  cs.c  gatt.c  iso.c  l2cap.c
bluetooth/lib/: CMakeLists.txt  ead.c
bluetooth/mesh/: CMakeLists.txt  Kconfig  access.c  access.h  adv.c  adv.h  adv_ext.c  adv_legacy.c  app_keys.c  app_keys.h  beacon.c  beacon.h  blob.h  blob_cli.c  blob_io_flash.c  blob_srv.c  brg_cfg.c  brg_cfg.h  brg_cfg_cli.c  brg_cfg_srv.c  cdb.c  cfg.c  cfg_cli.c  cfg_srv.c  crypto.c  crypto.h  crypto_psa.c  delayable_msg.c  delayable_msg.h  dfd_srv.c  dfd_srv_internal.h  dfu.h  dfu_cli.c  dfu_metadata.c  dfu_slot.c  dfu_srv.c  foundation.h  friend.c  friend.h  gatt_cli.c  (+62 more)
bluetooth/mesh/shell/: CMakeLists.txt  blob.c  brg_cfg.c  cfg.c  dfd.c  dfu.c  health.c  large_comp_data.c  od_priv_proxy.c  op_agg.c  priv_beacon.c  rpr.c  sar.c  shell.c  sol_pdu_rpl.c  utils.c  utils.h
bluetooth/services/: CMakeLists.txt  Kconfig  Kconfig.dis  cts.c  dis.c  hrs.c  tps.c
bluetooth/services/bas/: CMakeLists.txt  bas.c  bas_bcs.c  bas_bls.c  bas_internal.h
bluetooth/services/ias/: CMakeLists.txt  Kconfig.ias  ias.c  ias_client.c
bluetooth/services/ias/shell/: CMakeLists.txt  ias.c  ias_client.c
bluetooth/services/nus/: CMakeLists.txt  Kconfig.nus  bt_nus_auto_start_bt.c  nus.c  nus_inst.c  nus_internal.h
bluetooth/services/ots/: CMakeLists.txt  Kconfig  ots.c  ots_client.c  ots_dir_list.c  ots_dir_list_internal.h  ots_internal.h  ots_l2cap.c  ots_l2cap_internal.h  ots_oacp.c  ots_oacp_internal.h  ots_obj_manager.c  ots_obj_manager_internal.h  ots_olcp.c  ots_olcp_internal.h
cmake/: check_kconfig.py  helpers.cmake  kconfig.cmake  libs.cmake  stack_helpers.cmake
core/: CMakeLists.txt  stack_init.c
drivers/: CMakeLists.txt  h4.c  hci_sock.c  hci_sock.h  userchan.c
include/: bt_stack_init.h  bt_storage.h  bt_toolchain_macro.h
include/bluetooth/: addr.h  assigned_numbers.h  att.h  bluetooth.h  buf.h  byteorder.h  conn.h  crypto.h  cs.h  direction.h  ead.h  gap.h  gatt.h  hci.h  hci_raw.h  hci_types.h  hci_vs.h  iso.h  l2cap.h  mesh.h  testing.h  uuid.h
include/bluetooth/audio/: aics.h  audio.h  bap.h  bap_lc3_preset.h  cap.h  ccid.h  ccp.h  csip.h  gmap.h  gmap_lc3_preset.h  has.h  lc3.h  mcc.h  mcs.h  media_proxy.h  micp.h  pacs.h  pbp.h  tbs.h  tmap.h  vcp.h  vocs.h
include/bluetooth/classic/: a2dp.h  a2dp_codec_sbc.h  avdtp.h  avrcp.h  classic.h  goep.h  hfp_ag.h  hfp_hf.h  l2cap_br.h  obex.h  rfcomm.h  sdp.h
include/drivers/: bluetooth.h
include/utils/: bt_dlist.h  bt_slist.h  bt_utils.h
osdep/: os.h
osdep/atomic/: atomic.h
osdep/freertos/: os.c  os.h
osdep/posix/: CMakeLists.txt  os.c  os.h
platform/openvela/: CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md
samples/cmds/: CMakeLists.txt  bt_cmd_main.c
samples/demo/: CMakeLists.txt  main.c
shim/: CMakeLists.txt
shim/include/: preinclude.h  shim.h  shim_settings.h  shim_shell.h
tests/base/: test_bt_atomic.c  test_bt_buf.c  test_bt_buf_simple.c  test_bt_debug.c  test_bt_mem_pool.c  test_bt_queue.c  test_bt_work.c  test_buf_simple.c  test_fifo.c  test_lifo.c  test_log.c  test_net_buf_pool.c  test_queue.c  test_utils.c  test_work.c
tests/osdep/: test_os.c
tools/kconfig/: genconfig.py  run_menuconfig.py
(+46 files in other folders)
